[스프링]Autowired 학습 같은 타입의 빈이 여러개 일 때 주입 	- @Primary 	- 해당 타입의 빈 모두 주입 받기(List 형태로 Autowired) 	- @Qualifier (빈 이름으로 주입) BeanPostProcessor : 새로 만든 빈 인스턴스를 수정할 수 있는 라이프 사이클 인터페이스 AutowiredAnnotationBeanPostProcessor extends BeanPostProcessor 	- 스프링이 제공하는 @Autowired와 @Value 애노테이션 그리고 JSR-330의 @Inject 애노테이션을 지원하는 애노테이션 처리기

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@
 # auto-import.
 # .idea/artifacts
 # .idea/compiler.xml
-# .idea/jarRepositories.xml
+## .idea/jarRepositories.xml
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
@@ -77,8 +77,8 @@ fabric.properties
 
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
-
-# *.iml
+.idea/
+*.iml
 # modules.xml
 # .idea/misc.xml
 # *.ipr
@@ -140,6 +140,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+.mvn
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
